tests/ui/endpoint/auth_data_non_clone.stderr
error[E0277]: the trait bound `AuthData: Clone` is not satisfied
  --> tests/ui/endpoint/auth_data_non_clone.rs:15:25
   |
15 | async fn read_all(auth: AuthStatus<AuthData>) -> Result<NoContent, AuthError> {
   |                         ^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `AuthData`
   |
   = note: required for `gotham_restful::AuthStatus<AuthData>` to implement `Clone`
note: required by a bound in `clone_from_state`
  --> src/lib.rs
   |
   |     pub fn clone_from_state<T>(state: &State) -> T
   |            ---------------- required by a bound in this function
   |     where
   |         T: FromState + Clone
   |                        ^^^^^ required by this bound in `clone_from_state`
help: consider annotating `AuthData` with `#[derive(Clone)]`
   |
  9 + #[derive(Clone)]
 10 | struct AuthData {
    |
